AG-11018 - Fix website Safari light/dark mode scrollbar colors bug

--- a/documentation/ag-grid-docs/src/design-system/_base.scss
+++ b/documentation/ag-grid-docs/src/design-system/_base.scss
@@ -25,3 +25,42 @@ html {
         --header-nav-height: 64px;
     }
 }
+
+// Safari only fix light/darkmode scrollbar colors
+// `_::-webkit-full-page-media, _:future, :root` Safari only CSS hack
+_::-webkit-full-page-media,
+_:future,
+:root *::-webkit-scrollbar {
+    width: 15px;
+}
+
+_::-webkit-full-page-media,
+_:future,
+:root *::-webkit-scrollbar-track {
+    background-color: #fafafa;
+    border-right: 1px solid #e8e8e8;
+    border-left: 1px solid #e8e8e8;
+}
+
+_::-webkit-full-page-media,
+_:future,
+:root[data-dark-mode='true'] *::-webkit-scrollbar-track {
+    background-color: #2c2c2c;
+    border-right-color: #3d3d3d;
+    border-left-color: #3d3d3d;
+}
+
+_::-webkit-full-page-media,
+_:future,
+:root *::-webkit-scrollbar-thumb {
+    border-radius: 8px;
+    background-color: #c1c1c1;
+    border: 4px solid transparent;
+    background-clip: content-box;
+}
+
+_::-webkit-full-page-media,
+_:future,
+:root[data-dark-mode='true'] *::-webkit-scrollbar-thumb {
+    background-color: #6b6b6b;
+}
